@@ -7,8 +7,8 @@ Build-Depends: gettext, make (>= 3.80-1), dpkg-dev (>= 1.13.5), bzip2, file,
  kfreebsd-kernel-headers [kfreebsd-i386 kfreebsd-amd64],
  gcc-4.1, binutils (>= 2.16.1cvs20051109-1),
  autoconf, sed (>= 4.0.5-4), gawk, debhelper (>= 5.0),
- libc6-dev-amd64 [i386], libc6-dev-ppc64 [powerpc], libc6-dev-i386 [amd64], libc6-dev-powerpc [ppc64], libc6-dev-sparc64 [sparc], libc6-dev-s390x [s390], 
- lib32ssp0 [amd64 ppc64], lib64ssp0 [i386 powerpc sparc s390],
+ libc6-dev-amd64 [i386], libc6-dev-ppc64 [powerpc], libc6-dev-i386 [amd64], libc6-dev-powerpc [ppc64], libc6-dev-sparc64 [sparc], libc6-dev-s390x [s390], libc0.1-dev-i386 [kfreebsd-amd64], 
+ lib32ssp0 [amd64 kfreebsd-amd64 ppc64], lib64ssp0 [i386 powerpc sparc s390],
  quilt
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Build-Conflicts: gcc-4.1 (= 4.1.1-14)
@@ -485,6 +485,27 @@ Description: GNU C Library: 64bit Development Libraries for PowerPC64
  Contains the symlinks and object files needed to compile and link programs
  which use the standard C library. This is the 64bit version of the
  library, meant for PowerPC64 systems.
+
+Package: libc0.1-i386
+Architecture: kfreebsd-amd64
+Section: libs
+Priority: optional
+Depends: libc0.1 (= ${Source-Version})
+Description: GNU C Library: 32bit shared libraries for AMD64
+ This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ This is the 32bit version of the library, meant for AMD64 systems.
+
+Package: libc0.1-dev-i386
+Architecture: kfreebsd-amd64
+Section: libdevel
+Priority: optional
+Provides: lib32c-dev
+Depends: libc0.1-i386 (= ${Source-Version}), libc0.1-dev (= ${Source-Version}), lib32gcc1
+Description: GNU C Library: 32bit development libraries for AMD64
+ Contains the symlinks and object files needed to compile and link programs
+ which use the standard C library. This is the 32bit version of the
+ library, meant for AMD64 systems.
 
 Package: libc6-sparcv9
 Architecture: sparc
