@@ -7,8 +7,8 @@ Build-Depends: gettext, make (>= 3.80-1), dpkg-dev (>= 1.13.5), bzip2, file,
  kfreebsd-kernel-headers [kfreebsd-i386 kfreebsd-amd64],
  gcc-4.1, binutils (>= 2.16.1cvs20051109-1),
  autoconf, sed (>= 4.0.5-4), gawk, debhelper (>= 5.0),
- libc6-dev-amd64 [i386], libc6-dev-ppc64 [powerpc], libc6-dev-i386 [amd64], libc6-dev-powerpc [ppc64], libc6-dev-sparc64 [sparc], libc6-dev-s390x [s390], 
- lib32ssp0 [amd64 ppc64], lib64ssp0 [i386 powerpc sparc s390],
+ libc6-dev-amd64 [i386], libc6-dev-ppc64 [powerpc], libc6-dev-i386 [amd64], libc6-dev-powerpc [ppc64], libc6-dev-sparc64 [sparc], libc6-dev-s390x [s390], libc0.1-dev-i386 [kfreebsd-amd64], 
+ lib32ssp0 [amd64 kfreebsd-amd64 ppc64], lib64ssp0 [i386 powerpc sparc s390],
  quilt
 Build-Depends-Indep: perl, po-debconf (>= 1.0)
 Build-Conflicts: gcc-4.1 (= 4.1.1-14)
