@@ -236,6 +236,11 @@ glibc (2.3.6.ds1-10) UNRELEASED; urgency=low
 
   * sysdeps/kfreebsd.mk: Link all machine*/ directories to support
     new bi-arch headers.
+  * Add bi-arch support on kfreebsd-amd64:
+    - debian/sysdeps/kfreebsd-amd64.mk: New pass for 32-bit glibc
+    - debian/control.in/main: Add build-depends on libc0.1-dev-i386
+    - debian/control.in/kfreebsd-i386: add libc0.1-dev-i386 and
+      libc0.1-i386 packages
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue,  2 Jan 2007 03:13:54 +0100
 
